--- a/static/src/components/bait-preview-wrapper/styles.css
+++ b/static/src/components/bait-preview-wrapper/styles.css
@@ -17,9 +17,7 @@
   padding-left: 15px;
   padding-right: 15px;
   padding-top: 90px;
-  padding-bottom: 90px;
-  margin-left: -10px;
-  margin-right: -10px; }
+  padding-bottom: 90px; }
 
 /* bait item */
 .bait-preview {
@@ -50,11 +48,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow: hidden; }
+    overflow: hidden;
+    height: 200px; }
     .bait-preview__image img {
       display: block;
-      max-width: 100%;
-      height: auto;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
       flex-shrink: 0; }
   .bait-preview__title {
     display: flex;
@@ -75,9 +75,12 @@
         width: 80%; } }
   .bait-preview__price {
     display: block;
+    padding-left: 5px;
+    padding-right: 5px;
     position: absolute;
     left: 25px;
-    bottom: -50px;
+    bottom: -55px;
     z-index: 2;
     font-size: 2rem;
-    color: #353535; }
+    color: #353535;
+    background-color: rgba(255, 255, 255, 0.7); }
