--- a/static/src/components/bait-preview-wrapper/styles.scss
+++ b/static/src/components/bait-preview-wrapper/styles.scss
@@ -8,15 +8,8 @@
 	padding: {
 		left: 15px;
 		right: 15px;
-	}
-	
-	padding: {
 		top: 90px;
 		bottom: 90px;
-	}
-	margin: {
-		left: -10px;
-		right: -10px;
 	}
 }
 
@@ -65,12 +58,14 @@
 		justify-content: center;
 
 		overflow: hidden;
+		height: 200px;
 
 		img{
 			display: block;
-			max-width: 100%;
-			height: auto;
+			width: 100%;
+			height: 100%;
 
+			object-fit: cover;
 			flex-shrink: 0;
 		}
 	}
@@ -103,12 +98,18 @@
 	}
 	&__price{
 		display: block;
+		padding: {
+			left: 5px;
+			right: 5px;
+		}
 
 		position: absolute;
-		left: 25px; bottom: -50px;
+		left: 25px; bottom: -55px;
 		z-index: 2;
 
 		font-size: 2rem;
 		color: $primary-black;
+
+		background-color: rgba($primary-white, .7);
 	}
 }
