bait - colors slider

--- a/static/src/components/bait-colors/styles.css
+++ b/static/src/components/bait-colors/styles.css
@@ -12,47 +12,40 @@
  */
 @import url(~slick-carousel/slick/slick.css);
 @import url(~slick-carousel/slick/slick-theme.css);
-.bait-colors-wrapper {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
+.bait-color-slider {
   width: 100%;
   margin-top: 30px;
-  margin-bottom: 30px; }
-
-.slider {
-  width: 100%;
-  overflow: auto; }
-  .slider::after {
+  margin-bottom: 30px;
+  padding-top: 70px;
+  padding-bottom: 70px;
+  overflow: auto;
+  background-color: #353535; }
+  .bait-color-slider::after {
     content: "";
     clear: both;
     display: table; }
+  .bait-color-slider .slick-slide {
+    outline: 0;
+    width: 170px;
+    padding: 0 35px;
+    text-align: center; }
+    .bait-color-slider .slick-slide *:focus, .bait-color-slider .slick-slide:focus {
+      outline: 0; }
 
-.bait-color {
-  margin: 5px; }
-  @media (max-width: 568px) {
-    .bait-color {
-      flex: 0 0 calc(100% - 10px); } }
-  @media (min-width: 569px) and (max-width: 768px) {
-    .bait-color {
-      flex: 0 0 calc(50% - 10px); } }
-  @media (min-width: 769px) and (max-width: 991px) {
-    .bait-color {
-      flex: 0 0 calc(33% - 10px); } }
-  @media (min-width: 992px) {
-    .bait-color {
-      flex: 0 0 calc(20% - 10px); } }
-  .bait-color__image-wrapper {
-    padding: 15px;
-    background-color: #ffffff; }
-    .bait-color__image-wrapper img {
-      display: block;
-      max-width: 100%;
-      height: auto; }
-  .bait-color__name {
-    margin: 0;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 15px;
-    padding-right: 15px;
-    background-color: #ffffff; }
+.bait-color__image-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 150px;
+  margin-bottom: 15px; }
+  .bait-color__image-wrapper img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    flex-shrink: 0; }
+
+.bait-color__name {
+  margin: 0;
+  color: #ffffff;
+  font-weight: 300; }
