--- a/application/static/src/App.scss
+++ b/application/static/src/App.scss
@@ -1,4 +1,8 @@
 @import 'assets/styles/_normalize.scss';
+@import 'assets/styles/_fonts.scss';
 @import 'assets/styles/_variables.scss';
 @import 'assets/styles/_layout.scss';
 @import 'assets/styles/_global.scss';
+
+@import 'assets/styles/_header.scss';
+@import 'assets/styles/_footer.scss';
