--- a/application/static/src/components/logo/styles.scss
+++ b/application/static/src/components/logo/styles.scss
@@ -1,1 +1,53 @@
 @import "assets/styles/_variables.scss";
+
+.logo{
+  display: inline-block;
+
+  font-weight: normal;
+
+  @media(max-width: $screen-md-max){
+    width: 100%;
+    text-align: center;
+  }
+  @media(min-width: $screen-md){
+    text-align: left;
+  }
+  
+  &__custom{
+    margin: 0;
+    
+    color: $primary-red;
+    line-height: 50px;
+    font: {
+      size: 120px;
+      weight: normal;
+      family: $secondary-font;
+    }
+  }
+  &__normal{
+    margin: 0;
+    padding-left: 80px;
+
+    color: $primary-white;
+    line-height: 60px;
+    font: {
+      size: 60px;
+      weight: 300;
+      family: $primary-font;
+    }
+    text-transform: uppercase;
+  }
+  &__small{
+    margin: 15px 0 0 0 ;
+
+    text-align: center;
+    color: $primary-white;
+    font: {
+      family: $secondary-font;
+      size: 35px;
+    }
+    @media(max-width: $screen-md-max){
+      text-shadow: 1px 1px 1px rgba($primary-white, .8);
+    }
+  }
+}
