--- a/application/static/src/App.css
+++ b/application/static/src/App.css
@@ -389,6 +389,80 @@ template {
 [hidden] {
   display: none; }
 
+@font-face {
+  font-family: 'icomoon';
+  src: url("./assets/fonts/icomoon.eot?pk8gql");
+  src: url("./assets/fonts/icomoon.eot?pk8gql#iefix") format("embedded-opentype"), url("./assets/fonts/icomoon.ttf?pk8gql") format("truetype"), url("./assets/fonts/icomoon.woff?pk8gql") format("woff"), url("./assets/fonts/icomoon.svg?pk8gql#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+
+.icon-plus:before {
+  content: "\f067"; }
+
+.icon-minus:before {
+  content: "\f068"; }
+
+.icon-check:before {
+  content: "\f00c"; }
+
+.icon-close:before {
+  content: "\f00d"; }
+
+.icon-remove:before {
+  content: "\f00d"; }
+
+.icon-times:before {
+  content: "\f00d"; }
+
+.icon-chevron-left:before {
+  content: "\f053"; }
+
+.icon-chevron-right:before {
+  content: "\f054"; }
+
+.icon-arrow-left:before {
+  content: "\f060"; }
+
+.icon-arrow-right:before {
+  content: "\f061"; }
+
+.icon-chevron-down:before {
+  content: "\f078"; }
+
+.icon-phone:before {
+  content: "\f095"; }
+
+.icon-facebook:before {
+  content: "\f09a"; }
+
+.icon-facebook-f:before {
+  content: "\f09a"; }
+
+.icon-comment-o:before {
+  content: "\f0e5"; }
+
+.icon-comments-o:before {
+  content: "\f0e6"; }
+
+.icon-youtube:before {
+  content: "\f167"; }
+
+.icon-instagram:before {
+  content: "\f16d"; }
+
 /*
  * Theme colors
  */
@@ -510,3 +584,16 @@ body::-webkit-scrollbar-thumb {
     margin: 0;
     color: #a1a9b0;
     line-height: 2rem; }
+
+.header {
+  padding: 20px;
+  background-color: #353535;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+
+.footer {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #353535;
+  color: #ffffff; }
