--- a/application/static/src/assets/styles/_variables.scss
+++ b/application/static/src/assets/styles/_variables.scss
@@ -19,6 +19,7 @@ $body-bg: #f6f8fa;
  */
 $primary-font: 'Roboto', sans-serif;;
 $primary-fontSize: 18px;
+$primary-lineHeight: 25px;
 $secondary-font: 'Great Vibes', cursive;
 
 /*
