--- a/application/static/src/components/logo/styles.scss
+++ b/application/static/src/components/logo/styles.scss
@@ -50,4 +50,14 @@
       text-shadow: 1px 1px 1px rgba($primary-white, .8);
     }
   }
+
+  // modification for logo in header
+  &--header{
+
+  }
+
+  // modification for logo in footer
+  &--footer{
+    
+  }
 }
