--- a/application/static/src/App.css
+++ b/application/static/src/App.css
@@ -483,6 +483,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-size: 18px;
   font-weight: 300;
+  line-height: 25px;
   color: #353535;
   background-color: #f6f8fa; }
 
@@ -592,8 +593,21 @@ body::-webkit-scrollbar-thumb {
   align-items: center;
   justify-content: space-between; }
 
+.prefooter {
+  padding-top: 70px;
+  padding-bottom: 70px;
+  padding-right: 15px;
+  padding-left: 15px;
+  text-align: center; }
+
 .footer {
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 70px;
+  padding-bottom: 70px;
+  padding-right: 15px;
+  padding-left: 15px;
+  text-align: center;
   background-color: #353535;
   color: #ffffff; }
+  .footer .socials-list {
+    margin-top: 40px;
+    margin-bottom: 40px; }
