--- a/application/static/src/assets/styles/_layout.scss
+++ b/application/static/src/assets/styles/_layout.scss
@@ -10,6 +10,7 @@ body{
     size: $primary-fontSize;
     weight: 300;
   }
+  line-height: $primary-lineHeight;
   color: $primary-black;
   background-color: $body-bg;
 }
