--- a/application/static/src/components/bait-preview-wrapper/styles.css
+++ b/application/static/src/components/bait-preview-wrapper/styles.css
@@ -34,13 +34,14 @@
   .bait-preview__link {
     display: block;
     text-decoration: none;
+    position: relative;
     background-color: #ffffff;
-    transition: .15s linear;
-    border-radius: 10px;
+    transition: .3s ease-in-out;
+    border-radius: 20px;
     overflow: hidden;
-    box-shadow: 0 1px 3px rgba(53, 53, 53, 0.3); }
+    box-shadow: 0 1px 6px 0 rgba(20, 20, 20, 0.05); }
     .bait-preview__link:hover {
-      box-shadow: 0 1px 3px rgba(53, 53, 53, 0.8); }
+      box-shadow: 0 5px 15px rgba(20, 20, 20, 0.3); }
   .bait-preview__content {
     padding: 15px 25px;
     position: relative; }
@@ -49,7 +50,7 @@
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    height: 200px; }
+    height: 300px; }
     .bait-preview__image img {
       display: block;
       width: 100%;
@@ -60,7 +61,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    color: #353535; }
+    color: #141414; }
   .bait-preview__name {
     margin: 0;
     text-transform: uppercase; }
@@ -69,18 +70,39 @@
     font-weight: normal; }
   .bait-preview__text {
     margin: 0;
-    color: #a1a9b0; }
+    color: #a1a9b0;
+    line-height: 1rem;
+    font-size: 0.7778rem;
+    font-weight: 400; }
     @media (min-width: 569px) {
       .bait-preview__text {
         width: 80%; } }
   .bait-preview__price {
     display: block;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding: 7px;
     position: absolute;
     left: 25px;
     bottom: -55px;
     z-index: 2;
     font-size: 2rem;
-    color: #353535;
+    font-weight: 500;
+    color: #141414;
     background-color: rgba(255, 255, 255, 0.7); }
+  .bait-preview__status {
+    position: absolute;
+    bottom: 10px;
+    right: -30px;
+    z-index: 2;
+    width: 120px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    text-align: center;
+    font-size: 1.5rem;
+    color: #ffffff;
+    transform: rotate(-45deg); }
+    .bait-preview__status--new {
+      background-color: #84B71D; }
+    .bait-preview__status--sale {
+      background-color: #E04343; }
+    .bait-preview__status--limited {
+      background-color: #a1a9b0; }
