--- a/application/static/src/components/bait-preview-wrapper/styles.scss
+++ b/application/static/src/components/bait-preview-wrapper/styles.scss
@@ -31,18 +31,19 @@
 
 	&__link{
 		display: block;
-		text-decoration: none;
+    text-decoration: none;
+    position: relative;
 
 		background-color: $primary-white;
-		transition:  .15s linear;
+		transition: .3s ease-in-out;
 
-		border-radius: $gutter;
+		border-radius: 20px;
 		overflow: hidden;
-
-		box-shadow: 0 1px 3px rgba($primary-black, .3);
+		
+		box-shadow: $ios-shadow;
 
 		&:hover{
-			box-shadow: 0 1px 3px rgba($primary-black, .8);
+			box-shadow: 0 5px 15px rgba($primary-black, 0.3);
 		}
 	}
 
@@ -58,7 +59,7 @@
 		justify-content: center;
 
 		overflow: hidden;
-		height: 200px;
+		height: 300px;
 
 		img{
 			display: block;
@@ -90,7 +91,13 @@
 	&__text{
 		margin: 0;
 
-		color: $primary-grey;
+    color: $primary-grey;
+
+    line-height: 1rem;
+    font: {
+      size: 0.7778rem;
+      weight: 400;
+    }
 
 		@media(min-width: $screen-xs){
 			width: 80%;
@@ -98,18 +105,45 @@
 	}
 	&__price{
 		display: block;
-		padding: {
-			left: 5px;
-			right: 5px;
-		}
+		padding: 7px;
 
 		position: absolute;
 		left: 25px; bottom: -55px;
 		z-index: 2;
 
-		font-size: 2rem;
+    font: {
+      size: 2rem;
+      weight: 500;
+    }
 		color: $primary-black;
 
 		background-color: rgba($primary-white, .7);
-	}
+  }
+  &__status{
+    position: absolute;
+    bottom: 10px; right: -30px;
+    z-index: 2;
+
+    width: 120px;
+		padding: {
+			top: 5px;
+			bottom: 5px;
+		}
+
+		text-align: center;
+		font-size: 1.5rem;
+    color: $primary-white;
+
+		transform: rotate(-45deg);
+
+    &--new{
+      background-color: $status-new;
+    }
+    &--sale{
+      background-color: $status-sale;
+    }
+    &--limited{
+      background-color: $status-limited;
+    }
+  }
 }
