--- a/application/static/src/components/bait-preview-wrapper/styles.scss
+++ b/application/static/src/components/bait-preview-wrapper/styles.scss
@@ -85,7 +85,7 @@
 	&__weight{
 		font: {
 			size: 1.25rem;
-			weight: normal;
+			weight: 300;
 		}
 	}
 	&__text{
@@ -131,8 +131,12 @@
 		}
 
 		text-align: center;
-		font-size: 1.5rem;
-    color: $primary-white;
+		color: $primary-white;
+		font: {
+			size: 1rem;
+			weight: 400;
+		}
+		letter-spacing: 2px;
 
 		transform: rotate(-45deg);
 
