--- a/application/react/src/assets/styles/_variables.scss
+++ b/application/react/src/assets/styles/_variables.scss
@@ -12,6 +12,7 @@ $primary-green: #84B71D;
  * element colors
  */
 $body-bg: #fafafa;
+$header-footer-bg: #f3f9ed;
 
 // status
 $status-new: $primary-green;
