--- a/application/react/src/components/bait-preview-wrapper/styles.css
+++ b/application/react/src/components/bait-preview-wrapper/styles.css
@@ -16,7 +16,7 @@
   flex-wrap: wrap;
   padding-left: 15px;
   padding-right: 15px;
-  padding-top: 90px;
+  padding-top: 60px;
   padding-bottom: 90px; }
 
 /* bait item */
@@ -80,6 +80,7 @@
   .bait-preview__price {
     display: block;
     padding: 7px;
+    border-radius: 5px;
     position: absolute;
     left: 25px;
     bottom: -55px;
