--- a/application/react/src/components/bait-preview-wrapper/styles.scss
+++ b/application/react/src/components/bait-preview-wrapper/styles.scss
@@ -8,7 +8,7 @@
 	padding: {
 		left: 15px;
 		right: 15px;
-		top: 90px;
+		top: 60px;
 		bottom: 90px;
 	}
 }
@@ -106,6 +106,7 @@
 	&__price{
 		display: block;
 		padding: 7px;
+		border-radius: 5px;
 
 		position: absolute;
 		left: 25px; bottom: -55px;
