--- a/application/react/src/components/socials/styles.css
+++ b/application/react/src/components/socials/styles.css
@@ -26,11 +26,13 @@
     height: 40px;
     color: #ffffff;
     line-height: 40px;
+    font-size: 25px;
     text-align: center;
     text-decoration: none;
-    font-size: 25px;
+    border-radius: 3px;
     background-color: #E04343;
-    transition: color .15s linear; }
+    transition: all .25s linear; }
     .socials-list a:hover {
       background-color: #ffffff;
-      color: #E04343; }
+      color: #E04343;
+      box-shadow: 0 1px 6px 0 rgba(20, 20, 20, 0.05); }
