--- a/application/react/src/components/welcome/styles.scss
+++ b/application/react/src/components/welcome/styles.scss
@@ -2,7 +2,7 @@
 
 /* welcome slide */
 .welcome{
-  height: 50vh;
+  height: 400px;
 
   display: flex;
   align-items: center;
@@ -10,67 +10,13 @@
 
   position: relative;
 
+  text-align: center;
+
   background: {
     image: url('../../assets/images/welcome-bg.jpg');
     repeat: no-repeat;
     position: 50% bottom;
     size: cover;
     attachment: fixed;
-  }
-}
-
-/* scroll down */
-@keyframes ani-mouse {
-  0% {
-  opacity: 1;
-  top: 29%;
-  }
-  15% {
-  opacity: 1;
-  top: 50%;
-  }
-  50% {
-  opacity: 0;
-  top: 50%;
-  }
-  100% {
-  opacity: 0;
-  top: 29%;
-  }
-}
-
-.scroll-down{
-  position: absolute;
-  left: 50%; bottom: 20px;
-  z-index: 2;
-
-  margin-left: -18px;
-
-  &__btn{
-    display: block;
-  }
-
-  &__mouse{
-    position: relative;
-    display: block;
-    width: 36px;
-    height: 55px;
-    border: 3px solid rgba($primary-green, .5);
-    border-radius: 23px;
-
-    > * {
-      display: block;
-      width: 8px;
-      height: 8px;
-      margin: -4px 0 0 -4px;
-
-      position: absolute;
-      top: 29%; left: 50%;
-
-      border-radius: 50%;
-      background: $primary-green;
-
-      animation: ani-mouse 2.5s linear infinite;
-    }
   }
 }
