--- a/application/react/src/assets/styles/_variables.scss
+++ b/application/react/src/assets/styles/_variables.scss
@@ -12,7 +12,7 @@ $primary-green: #84B71D;
  * element colors
  */
 $body-bg: #fafafa;
-$header-footer-bg: #f3f9ed;
+$header-footer-bg: #fafafa;
 
 // status
 $status-new: $primary-green;
