--- a/application/react/src/components/about-bait-types/styles.scss
+++ b/application/react/src/components/about-bait-types/styles.scss
@@ -1,9 +1,13 @@
 @import "assets/styles/_variables.scss";
 
+.about-bait-types-section{
+  text-align: center;
+}
+
 .about-bait-types{
   display: flex;
   justify-content: center;
-  flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .bait-types-item{
