--- a/application/react/src/components/bait-preview-wrapper/styles.css
+++ b/application/react/src/components/bait-preview-wrapper/styles.css
@@ -20,92 +20,107 @@
   padding-bottom: 90px; }
 
 /* bait item */
-.bait-preview {
-  margin: 20px 10px; }
-  @media (max-width: 568px) {
-    .bait-preview {
-      flex: 0 0 calc(100% - 10px * 2); } }
-  @media (min-width: 569px) and (max-width: 991px) {
-    .bait-preview {
-      flex: 0 0 calc(50% - 10px * 2); } }
-  @media (min-width: 992px) {
-    .bait-preview {
-      flex: 0 0 calc(100% / 3 - 10px * 2); } }
-  .bait-preview__link {
+@media (max-width: 568px) {
+  .bait-preview {
+    flex: 0 0 calc(100%);
+    margin-bottom: 15px; } }
+
+@media (min-width: 569px) and (max-width: 991px) {
+  .bait-preview {
+    flex: 0 0 calc(50% - 10px * 2);
+    margin: 20px 10px; } }
+
+@media (min-width: 992px) {
+  .bait-preview {
+    flex: 0 0 calc(100% / 3 - 10px * 2);
+    margin: 20px 10px; } }
+
+.bait-preview__link {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  position: relative;
+  border-radius: 20px;
+  overflow: hidden;
+  text-decoration: none;
+  transition: .3s ease-in-out;
+  background-color: #ffffff;
+  box-shadow: 0 1px 6px 0 rgba(20, 20, 20, 0.05); }
+  .bait-preview__link:hover {
+    box-shadow: 0 5px 15px rgba(20, 20, 20, 0.3); }
+
+.bait-preview__content {
+  flex-grow: 1;
+  padding: 15px 25px;
+  position: relative; }
+
+.bait-preview__image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  height: 300px; }
+  .bait-preview__image img {
     display: block;
-    text-decoration: none;
-    position: relative;
-    background-color: #ffffff;
-    transition: .3s ease-in-out;
-    border-radius: 20px;
-    overflow: hidden;
-    box-shadow: 0 1px 6px 0 rgba(20, 20, 20, 0.05); }
-    .bait-preview__link:hover {
-      box-shadow: 0 5px 15px rgba(20, 20, 20, 0.3); }
-  .bait-preview__content {
-    padding: 15px 25px;
-    position: relative; }
-  .bait-preview__image {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    height: 300px; }
-    .bait-preview__image img {
-      display: block;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      flex-shrink: 0; }
-  .bait-preview__title {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: #141414; }
-  .bait-preview__name {
-    margin: 0;
-    text-transform: uppercase; }
-  .bait-preview__weight {
-    font-size: 1.25rem;
-    font-weight: 300; }
-  .bait-preview__text {
-    margin: 0;
-    color: #a1a9b0;
-    line-height: 1rem;
-    font-size: 0.7778rem;
-    font-weight: 400; }
-    @media (min-width: 569px) {
-      .bait-preview__text {
-        width: 80%; } }
-  .bait-preview__price {
-    display: block;
-    padding: 7px;
-    border-radius: 5px;
-    position: absolute;
-    left: 25px;
-    bottom: -55px;
-    z-index: 2;
-    font-size: 2rem;
-    font-weight: 500;
-    color: #141414;
-    background-color: rgba(255, 255, 255, 0.7); }
-  .bait-preview__status {
-    position: absolute;
-    bottom: 10px;
-    right: -30px;
-    z-index: 2;
-    width: 120px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    text-align: center;
-    color: #ffffff;
-    font-size: 1rem;
-    font-weight: 400;
-    letter-spacing: 2px;
-    transform: rotate(-45deg); }
-    .bait-preview__status--new {
-      background-color: #84B71D; }
-    .bait-preview__status--sale {
-      background-color: #E04343; }
-    .bait-preview__status--limited {
-      background-color: #a1a9b0; }
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    flex-shrink: 0; }
+
+.bait-preview__title {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #141414; }
+
+.bait-preview__name {
+  margin: 0;
+  text-transform: uppercase; }
+
+.bait-preview__weight {
+  font-size: 1rem;
+  font-weight: 300; }
+
+.bait-preview__text {
+  margin: 0;
+  color: #a1a9b0;
+  line-height: 1rem;
+  font-size: 0.7778rem;
+  font-weight: 400; }
+  @media (min-width: 569px) {
+    .bait-preview__text {
+      width: 80%; } }
+
+.bait-preview__price {
+  display: block;
+  padding: 7px;
+  border-radius: 5px;
+  position: absolute;
+  left: 25px;
+  bottom: -55px;
+  z-index: 2;
+  font-size: 2rem;
+  font-weight: 500;
+  color: #141414;
+  background-color: rgba(255, 255, 255, 0.7); }
+
+.bait-preview__status {
+  position: absolute;
+  bottom: 10px;
+  right: -30px;
+  z-index: 2;
+  width: 120px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  text-align: center;
+  color: #ffffff;
+  font-size: 1rem;
+  font-weight: 400;
+  letter-spacing: 2px;
+  transform: rotate(-45deg); }
+  .bait-preview__status--new {
+    background-color: #84B71D; }
+  .bait-preview__status--sale {
+    background-color: #E04343; }
+  .bait-preview__status--limited {
+    background-color: #a1a9b0; }
